client/my-sites/plans-features-main/style.scss
@import "@wordpress/base-styles/breakpoints";
@import "@wordpress/base-styles/mixins";
@import "@wordpress/base-styles/variables";
@import "@automattic/plans-grid-next/src/media-queries";
@import "./media-queries";

$plan-features-header-banner-height: 20px;

:root {
	--scss-font-body-small: #{$font-body-small};
}

.plans-features-main__escape-hatch {
	display: flex;
	justify-content: center;
	margin-top: 10px;
	margin-left: 20px;
	margin-right: 20px;

	button {
		text-decoration: underline;
		font-size: var(--scss-font-body-small);
		font-weight: 500;
	}
}

.plans-features-main {
	.plans-grid-next__features-grid,
	.plans-grid-next__comparison-grid {
		margin-top: 50px;
	}
}

.is-2023-pricing-grid {
	margin: 0 auto;

	.signup__steps & {
		width: auto;
	}

	.signup__steps .plans-features-main__group.is-scrollable & {
		max-width: 100%;
	}

	.plans-wrapper {
		margin: 0 20px;
		padding: 0 0 10px;
		overflow-x: visible;
	}
}

.plans-features-main__comparison-grid-container {
	width: 100%;

	&.is-hidden {
		display: none;
	}

	.plans-features-main__plan-type-selector-layout {
		@include plan-type-selector-custom-mobile-breakpoint {
			// Overrides the plans-wrapper parent container margins
			margin: 0 -20px;
		}
	}
}

.notice.plan-features-main__notice {
	margin: 0 20px 24px;
	width: unset;

	@include plans-section-custom-mobile-breakpoint {
		margin: 0 0 24px;
		width: 100%;
	}
}

/*TODO: Remove the section below when the 2023 pricing grid is live to all locales */
.plans-features-main__group.is-scrollable:not(.is-2023-pricing-grid) {
	position: relative;

	.is-section-signup & {
		--approximate-viewport-scrollbar-width: 20px;

		width: calc(100vw - var(--approximate-viewport-scrollbar-width));
		margin-left: calc(50% - 50vw + var(--approximate-viewport-scrollbar-width) / 2);

		@media ( min-width: 1600px ) {
			max-width: 1600px;
			margin-left: -280px;
		}

		@include breakpoint-deprecated( "<1040px" ) {
			padding-top: 12px;
		}
	}

	.is-section-plans & {
		overflow: hidden;
		width: calc(100vw - 278px);
		margin-left: calc(50% - 50vw + 138px);

		@include breakpoint-deprecated( "<660px" ) {
			margin-left: 0;
			width: 100%;
		}

		@media ( min-width: 1800px ) {
			max-width: 1520px;
			margin-left: -240px;
		}
	}
}

/**
 * We auto-scroll to the plan comparison grid when it is shown.
 * However, on the /plans page, due to the presence of the masterbar on top,
 * we need to add a scroll offset.
 */
.is-section-plans .plans-features-main__comparison-grid-container {
	scroll-margin-top: $plan-features-header-banner-height + 24px;
	margin: auto;
}

.is-section-signup .plans-features-main__comparison-grid-container {
	margin: auto;
}

.is-section-stepper .plans-features-main__comparison-grid-container {
	margin: auto;
}

.is-2023-pricing-grid .plan-features-2023-grid__content {
	position: relative;
	margin: auto;
}

/**
 * Styles for design reskin
 * The `is-white-signup` class is attached to the body when the user is assigned the `reskinned` group of the `reskinSignupFlow` a/b test
 */
body.is-section-signup.is-white-signup {
	.plans-features-main {
		.plan-faq {
			h1 {
				margin-top: 10px;
				margin-bottom: 30px;
			}
		}
	}
}

.plans-features-main__plan-type-selector-layout {
	display: flex;
	justify-content: center;

	.segmented-control.price-toggle {
		.is-section-signup &,
		.is-section-stepper & {
			border: solid 1px var(--studio-gray-5);
		}
	}
}

/**
 * Styles required for the 2023 pricing grid plan type dropdown, sticky behavior to work
 */
body.is-section-plans .layout__content .main {
	@include plan-type-selector-custom-mobile-breakpoint {
		padding: 0;
		.is-2023-pricing-grid .plans-wrapper {
			margin: 0;
			padding: 17px max(calc(50% - 612px), 30px);
		}
	}
}

body.is-section-stepper,
body.is-section-signup.is-white-signup {
	.step-wrapper__header {
		margin: 24px 20px 38px;
	}
}

